test_src/compiler_errors/literals/IntTooLargeError2.b
class IntTooLargeError2 {
    void test() {
        println(123456789012);
    }
}
